--- a/.github/actions/setup-env/action.yml
+++ b/.github/actions/setup-env/action.yml
@@ -46,7 +46,7 @@ runs:
       run: |
         sed -i'' -e 's/python *= *[0-9.]\+/python =${{ inputs.python-version }}/g' environment-dev.yml
         cat environment-dev.yml
-        mamba env update --quiet --file environment-dev.yml
+        conda env update --quiet --file environment-dev.yml
         git checkout -- environment-dev.yml
 
     #    - name: Install playwright
