--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -66,38 +66,19 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Debug 1
-        if: always()
-        run: which pytest
-
-      - name: Debug 2
-        if: always()
-        run: pytest --version
-
-      - name: Debug 3
-        if: always()
-        run: pytest --help
-
-      - name: Debug 4
-        if: always()
-        run: ragna --help
-
       - name: Run unit tests
         id: tests
         run: |
           pytest \
-          --co -q
+            --ignore tests/deploy/ui \
+            --junit-xml=test-results.xml \
+            --durations=25
 
-#          --ignore tests/deploy/ui \
-#          --junit-xml=test-results.xml \
-#          --durations=25
-#
-#      - name: Surface failing tests
-#        if: steps.tests.outcome != 'success'
-#        uses: pmeier/pytest-results-action@v0.3.0
-#        with:
-#          path: test-results.xml
-
+      - name: Surface failing tests
+        if: steps.tests.outcome != 'success'
+        uses: pmeier/pytest-results-action@v0.3.0
+        with:
+          path: test-results.xml
 #  pytest-ui:
 #    strategy:
 #      matrix:
