--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [build-system]
 requires = [
     "setuptools>=64",
-    "setuptools_scm[toml]>=8,<8.1",
+    "setuptools_scm[toml]>=8.1",
 ]
 build-backend = "setuptools.build_meta"
 
