--- a/ragna-docker.toml
+++ b/ragna-docker.toml
@@ -4,7 +4,7 @@ document = "ragna.core.LocalDocument"
 source_storages = [
     "ragna.source_storages.Chroma",
     "ragna.source_storages.LanceDB",
-    "ragna.source_storages.QdrantDB"
+    "ragna.source_storages.QdrantDB",
 ]
 assistants = [
     "ragna.assistants.ClaudeHaiku",
