feat: Qdrant RAG Storage (#524)
Signed-off-by: Anush008 <anushshetty90@gmail.com>
Co-authored-by: Philip Meier <github.pmeier@posteo.de>

--- a/ragna-docker.toml
+++ b/ragna-docker.toml
@@ -3,7 +3,8 @@ authentication = "ragna.deploy.RagnaDemoAuthentication"
 document = "ragna.core.LocalDocument"
 source_storages = [
     "ragna.source_storages.Chroma",
-    "ragna.source_storages.LanceDB"
+    "ragna.source_storages.LanceDB",
+    "ragna.source_storages.QdrantDB",
 ]
 assistants = [
     "ragna.assistants.ClaudeHaiku",
