Add git command to assume unchanged in RTD pre-install

--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -8,6 +8,8 @@ build:
   tools:
     python: "mambaforge-22.9"
   jobs:
+    pre_install:
+      - git update-index --assume-unchanged environment-dev.yml docs/conf.py
     post_checkout:
       # Check out the full depth for setuptools-scm
       - git fetch --unshallow || true
