--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -25,9 +25,8 @@ build:
       - ./git-lfs checkout
     pre_install:
       - git status --untracked-files=no --porcelain
-      - sed --version
-      - git status --untracked-files=no --porcelain | sed -E 's/\s*\S+\s+//'
-      - git status --untracked-files=no --porcelain | cut -d' ' -f3
+      - git status --untracked-files=no --porcelain | python -c 'import sys;
+        [print(l.strip().split(" ", 1)[1]) for l in sys.stdin]'
       - git update-index --assume-unchanged $(git status --untracked-files=no
         --porcelain | sed -E 's/\s*\S+\s+//')
     post_install:
