change sed quoting

--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -28,7 +28,7 @@ build:
       - git status --untracked-files=no --porcelain | python -c "import sys;
         [print(l.strip().split(maxsplit=1)[1]) for l in sys.stdin]"
       - git update-index --assume-unchanged $(git status --untracked-files=no
-        --porcelain | sed -E 's/\s*\S+\s+//')
+        --porcelain | sed -E "s/\s*\S+\s+//")
     post_install:
       - git update-index --really-refresh
 
