--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -24,13 +24,10 @@ build:
       - ./git-lfs fetch
       - ./git-lfs checkout
     pre_install:
-      - git status --untracked-files=no --porcelain
-      - git status --untracked-files=no --porcelain | python -c "import sys;
-        [print(l.strip().split(maxsplit=1)[1]) for l in sys.stdin]"
       - git update-index --assume-unchanged $(git status --untracked-files=no
         --porcelain | sed -E "s/\s*\S+\s+//")
     post_install:
-      - git update-index --really-refresh
+      - git update-index --really-refresh || true
 
 mkdocs:
   configuration: mkdocs.yml
