Fix MkDocs build (#539)
Co-authored-by: Philip Meier <github.pmeier@posteo.de>

--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -23,6 +23,11 @@ build:
       - ./git-lfs install
       - ./git-lfs fetch
       - ./git-lfs checkout
+    pre_install:
+      - git update-index --assume-unchanged $(git status --untracked-files=no
+        --porcelain | sed -E "s/\s*\S+\s+//")
+    post_install:
+      - git update-index --really-refresh || true
 
 mkdocs:
   configuration: mkdocs.yml
