[FIX] Remove `defaults` channel from Conda environments in CI (#545)
Co-authored-by: Philip Meier <github.pmeier@posteo.de>

--- a/.github/actions/setup-env/action.yml
+++ b/.github/actions/setup-env/action.yml
@@ -18,6 +18,7 @@ runs:
       with:
         miniforge-version: latest
         activate-environment: ragna-dev
+        conda-remove-defaults: true
 
     - name: Display conda info
       shell: bash -elo pipefail {0}
