--- a/.gitattributes
+++ b/.gitattributes
@@ -6,3 +6,5 @@
 *.png filter=lfs diff=lfs merge=lfs -text
 # but keep the brand images as regular images
 docs/assets/brand/logo-**/* !filter !diff !merge binary
+# SCM syntax highlighting & preventing 3-way merges
+pixi.lock merge=binary linguist-language=YAML linguist-generated=true
