--- a/pyproject.toml
+++ b/pyproject.toml
@@ -191,3 +191,16 @@ module = [
 disable_error_code = [
     "override",
 ]
+
+[tool.pixi.workspace]
+channels = ["conda-forge"]
+platforms = ["linux-64"]
+
+[tool.pixi.pypi-dependencies]
+Ragna = { path = ".", editable = true }
+
+[tool.pixi.environments]
+default = { solve-group = "default" }
+all = { features = ["all"], solve-group = "default" }
+
+[tool.pixi.tasks]
