--- a/pyproject.toml
+++ b/pyproject.toml
@@ -202,8 +202,40 @@ Ragna = { path = ".", editable = true }
 [tool.pixi.environments]
 default = { solve-group = "default" }
 all = { features = ["all"], solve-group = "default" }
+dev = { features = ["all", "dev", "docs"], solve-group = "default" }
 
 [tool.pixi.tasks]
 
 [tool.pixi.dependencies]
 python = "3.10.*"
+
+[tool.pixi.feature.dev.dependencies]
+git-lfs = "*"
+
+[dependency-groups]
+dev = [
+    "pytest>=6,<9",
+    "mypy==1.10.0",
+    "httpx-sse>=0.4.0,<0.5",
+    "ijson>=3.3.0,<4",
+    "sse-starlette>=2.2.1,<3",
+    "python-dotenv>=1.1.0,<2",
+    "pytest-mock>=3.14.0,<4",
+    "pytest-asyncio>=0.26.0,<0.27",
+    "pytest-playwright>=0.7.0,<0.8",
+    "types-redis>=4.6.0.20241004,<5",
+    "pre-commit>=4.2.0,<5",
+    "types-aiofiles>=24.1.0.20250326,<25",
+    "sqlalchemy-stubs>=0.4,<0.5",
+    "setuptools-scm>=8.2.0,<9",
+    "pip-tools>=7.4.1,<8"
+]
+docs = [
+     "mkdocs-gallery>=0.10.3,<0.11",
+     "mkdocs>=1.6.1,<2",
+     "mkdocs-material>=9.6.11,<10",
+     "mkdocstrings[python]>=0.29.1,<0.30",
+     "mkdocs-gen-files>=0.5.0,<0.6",
+     "material-plausible-plugin>=0.3.0,<0.4",
+     "mdx-truly-sane-lists>=1.3,<2"
+]
