--- a/.github/actions/setup-env/action.yml
+++ b/.github/actions/setup-env/action.yml
@@ -27,7 +27,7 @@ runs:
       id: pixi-env
       shell: bash
       run: |
-        ENVIRONMENT=${{ inputs.environment }}${{ inputs.optional-dependencies == "true" && '-all' || '' }}-${{ inputs.python-version }}
+        ENVIRONMENT=${{ inputs.environment }}${{ inputs.optional-dependencies && '-all' || '' }}-${{ inputs.python-version }}
         echo "environment=${ENVIRONMENT} | tee -a "${GITHUB_OUTPUT}"
 
     - name: Set up Pixi
