--- a/.github/actions/setup-env/action.yml
+++ b/.github/actions/setup-env/action.yml
@@ -28,7 +28,7 @@ runs:
       shell: bash
       run: |
         ENVIRONMENT=${{ inputs.environment }}${{ inputs.optional-dependencies && '-all' || '' }}-${{ inputs.python-version }}
-        echo "environment=${ENVIRONMENT} | tee -a "${GITHUB_OUTPUT}"
+        echo "environment=${ENVIRONMENT}" | tee -a "${GITHUB_OUTPUT}"
 
     - name: Set up Pixi
       uses: prefix-dev/setup-pixi@v0.8.3
