--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -22,6 +22,7 @@ jobs:
       - name: Setup environment
         uses: ./.github/actions/setup-env
         with:
+          environment: "default"
           optional-dependencies: "false"
 
       - name: Test optional dependencies
@@ -44,6 +45,7 @@ jobs:
       - name: Setup environment
         uses: ./.github/actions/setup-env
         with:
+          environment: "dev"
           optional-dependencies: "false"
 
       - uses: actions/cache@v4
@@ -75,4 +77,4 @@ jobs:
         uses: ./.github/actions/setup-env
 
       - name: Run type checks
-        run: mypy
+        run: pixi run types
