Specify Pixi environment in Mypy CI check

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -75,6 +75,9 @@ jobs:
 
       - name: Setup environment
         uses: ./.github/actions/setup-env
+        with:
+          environment: "dev"
+          optional-dependencies: "false"
 
       - name: Run type checks
         run: pixi run types
