--- a/.github/actions/setup-env/action.yml
+++ b/.github/actions/setup-env/action.yml
@@ -7,10 +7,14 @@ inputs:
     description: "Python version to install. Can be `310`, `311`, or `312`."
   environment:
     default: "default"
-    description: "Install default dependencies or development dependencies. Can be `default` or `dev`."
+    description:
+      "Install default dependencies or development dependencies. Can be `default` or
+      `dev`."
   optional-dependencies:
     default: "true"
-    description: "Install ragna with `[all]`, i.e. all optional dependencies. Can be `true` or `false`."
+    description:
+      "Install ragna with `[all]`, i.e. all optional dependencies. Can be `true` or
+      `false`."
 
 runs:
   using: composite
@@ -36,7 +40,9 @@ runs:
         environments: ${{ steps.pixi-env.outputs.environment }}
         frozen: true
         activate-environment: ${{ steps.pixi-env.outputs.environment }}
-        cache-key: pixi-${{ steps.cache-key.outputs.date }}-${{ steps.pixi-env.outputs.environment }}-
+        cache-key:
+          pixi-${{ steps.cache-key.outputs.date }}-${{
+          steps.pixi-env.outputs.environment }}-
 
     - name: Display Pixi info
       shell: bash -elo pipefail {0}
