--- a/.github/actions/setup-env/action.yml
+++ b/.github/actions/setup-env/action.yml
@@ -33,5 +33,4 @@ runs:
         environments: ${{ steps.pixi-env.outputs.environment }}
         frozen: true
         activate-environment: ${{ steps.pixi-env.outputs.environment }}
-        cache-key:
-          pixi-${{ steps.pixi-env.outputs.environment }}-
+        cache-key: pixi-${{ steps.pixi-env.outputs.environment }}-
