--- a/pyproject.toml
+++ b/pyproject.toml
@@ -194,7 +194,7 @@ disable_error_code = [
 
 [tool.pixi.workspace]
 channels = ["conda-forge"]
-platforms = ["linux-64", "win-64", "osx-64", "osx-arm64"]
+platforms = ["linux-64", "win-64", "osx-arm64"]
 
 [tool.pixi.pypi-dependencies]
 Ragna = { path = ".", editable = true }
