--- a/pyproject.toml
+++ b/pyproject.toml
@@ -208,14 +208,14 @@ default-all = { features = ["all", "py310"], solve-group = "default" }
 default-all-py310 = { features = ["all", "py310"], solve-group = "default" }
 default-all-py311 = { features = ["all", "py311"], solve-group = "default-py311" }
 default-all-py312 = { features = ["all", "py312"], solve-group = "default-py312" }
-dev = { features = ["dev", "docs", "py310"], solve-group = "default" }
-dev-py310 = { features = ["dev", "docs", "py310"], solve-group = "default" }
-dev-py311 = { features = ["dev", "docs", "py311"], solve-group = "default-py311" }
-dev-py312 = { features = ["dev", "docs", "py312"], solve-group = "default-py312" }
-dev-all = { features = ["all", "dev", "docs", "py310"], solve-group = "default" }
-dev-all-py310 = { features = ["all", "dev", "docs", "py310"], solve-group = "default" }
-dev-all-py311 = { features = ["all", "dev", "docs", "py311"], solve-group = "default-py311" }
-dev-all-py312 = { features = ["all", "dev", "docs", "py312"], solve-group = "default-py312" }
+dev = { features = ["dev", "py310"], solve-group = "default" }
+dev-py310 = { features = ["dev", "py310"], solve-group = "default" }
+dev-py311 = { features = ["dev", "py311"], solve-group = "default-py311" }
+dev-py312 = { features = ["dev", "py312"], solve-group = "default-py312" }
+dev-all = { features = ["all", "dev", "py310"], solve-group = "default" }
+dev-all-py310 = { features = ["all", "dev", "py310"], solve-group = "default" }
+dev-all-py311 = { features = ["all", "dev", "py311"], solve-group = "default-py311" }
+dev-all-py312 = { features = ["all", "dev", "py312"], solve-group = "default-py312" }
 
 [tool.pixi.tasks]
 
@@ -257,14 +257,13 @@ dev = [
     "types-aiofiles>=24.1.0.20250326,<25",
     "sqlalchemy-stubs>=0.4,<0.5",
     "setuptools-scm>=8.2.0,<9",
-    "pip-tools>=7.4.1,<8"
-]
-docs = [
-     "mkdocs-gallery>=0.10.3,<0.11",
-     "mkdocs>=1.6.1,<2",
-     "mkdocs-material>=9.6.11,<10",
-     "mkdocstrings[python]>=0.29.1,<0.30",
-     "mkdocs-gen-files>=0.5.0,<0.6",
-     "material-plausible-plugin>=0.3.0,<0.4",
-     "mdx-truly-sane-lists>=1.3,<2"
+    "pip-tools>=7.4.1,<8",
+    # Documentation
+    "mkdocs-gallery>=0.10.3,<0.11",
+    "mkdocs>=1.6.1,<2",
+    "mkdocs-material>=9.6.11,<10",
+    "mkdocstrings[python]>=0.29.1,<0.30",
+    "mkdocs-gen-files>=0.5.0,<0.6",
+    "material-plausible-plugin>=0.3.0,<0.4",
+    "mdx-truly-sane-lists>=1.3,<2"
 ]
