--- a/.github/actions/setup-env/action.yml
+++ b/.github/actions/setup-env/action.yml
@@ -2,35 +2,19 @@ name: setup-dev-env
 description: "Setup development environment"
 
 inputs:
-  python-version:
-    default: "310"
-    description: "Python version to install. Can be `310`, `311`, or `312`."
   environment:
     default: "default"
     description:
-      "Install default dependencies or development dependencies. Can be `default` or
-      `dev`."
-  optional-dependencies:
-    default: "true"
-    description:
-      "Install ragna with `[all]`, i.e. all optional dependencies. Can be `true` or
-      `false`."
+      "Pixi environment to activate. Examples include `default`, `dev-all-py312`"
 
 runs:
   using: composite
 
   steps:
-    - name: Get Pixi environment name
-      id: pixi-env
-      shell: bash
-      run: |
-        ENVIRONMENT=${{ inputs.environment }}${{ inputs.optional-dependencies == 'true' && '-all' || '' }}-py${{ inputs.python-version }}
-        echo "environment=${ENVIRONMENT}" | tee -a "${GITHUB_OUTPUT}"
-
     - name: Set up Pixi
       uses: prefix-dev/setup-pixi@v0.8.3
       with:
-        environments: ${{ steps.pixi-env.outputs.environment }}
+        environments: ${{ inputs.environment }}
         frozen: true
-        activate-environment: ${{ steps.pixi-env.outputs.environment }}
+        activate-environment: ${{ inputs.environment }}
         cache-key: pixi-${{ steps.pixi-env.outputs.environment }}-
