--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,9 +15,6 @@ on:
 jobs:
   importable:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        shell: bash -elo pipefail {0}
 
     steps:
       - name: Checkout repository
@@ -28,7 +25,7 @@ jobs:
       - name: Setup environment
         uses: ./.github/actions/setup-env
         with:
-          optional-dependencies: "false"
+          environment: "dev"
 
       - name: Check if all public packages are importable
         run: python tests/test_importable.py
@@ -40,20 +37,16 @@ jobs:
           - ubuntu-latest
           - windows-latest
           - macos-latest
-        python-version: ["3.10"]
+        environment: ["dev-all-py310"]
         include:
           - os: ubuntu-latest
-            python-version: "3.11"
+            environment: "dev-all-py311"
           - os: ubuntu-latest
-            python-version: "3.12"
+            environment: "dev-all-py312"
 
       fail-fast: false
 
     runs-on: ${{ matrix.os }}
-
-    defaults:
-      run:
-        shell: bash -elo pipefail {0}
 
     steps:
       - name: Checkout repository
@@ -64,7 +57,7 @@ jobs:
       - name: Setup environment
         uses: ./.github/actions/setup-env
         with:
-          python-version: ${{ matrix.python-version }}
+          environment: ${{ matrix.environment }}
 
       - name: Run unit tests
         id: tests
