Update environment names to be more standardized
This is to use caches that might already be present

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Setup environment
         uses: ./.github/actions/setup-env
         with:
-          environment: "default"
+          environment: "default-py310"
 
       - name: Test optional dependencies
         run: |
@@ -38,7 +38,7 @@ jobs:
       - name: Setup environment
         uses: ./.github/actions/setup-env
         with:
-          environment: "dev"
+          environment: "dev-py310"
 
       - uses: actions/cache@v4
         with:
@@ -65,7 +65,7 @@ jobs:
       - name: Setup environment
         uses: ./.github/actions/setup-env
         with:
-          environment: "dev-all"
+          environment: "dev-all-py310"
 
       - name: Run type checks
         run: |
