--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -61,6 +61,7 @@ jobs:
 
       - name: Run unit tests
         id: tests
+        shell: bash -elo pipefail {0}
         run: |
           pytest \
             --ignore tests/deploy/ui \
