--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -48,6 +48,10 @@ jobs:
 
     runs-on: ${{ matrix.os }}
 
+    defaults:
+      run:
+        shell: bash -elo pipefail {0}
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
