--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -6,7 +6,7 @@ version: 2
 build:
   os: ubuntu-22.04
   tools:
-    python: 3.12
+    python: "3.12"
   jobs:
     post_checkout:
       # Check out the full depth for setuptools-scm
