--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -26,7 +26,7 @@ build:
     pre_install:
       - git update-index --assume-unchanged $(git status --untracked-files=no
         --porcelain | sed -E "s/\s*\S+\s+//")
-      - PIXI_VERSION=v0.45.0 curl -fsSL https://pixi.sh/install.sh
+      - curl -fsSL https://pixi.sh/install.sh | PIXI_VERSION=v0.45.0 bash
     install:
       - pixi global install -e dev-all-py312
     post_install:
