--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -27,6 +27,7 @@ build:
       - git update-index --assume-unchanged $(git status --untracked-files=no
         --porcelain | sed -E "s/\s*\S+\s+//")
       - curl -fsSL https://pixi.sh/install.sh | PIXI_VERSION=v0.45.0 bash
+      - export PATH=$PATH:/home/docs/.pixi/bin
     install:
       - pixi global install -e dev-all-py312
     post_install:
