--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -28,8 +28,7 @@ build:
         --porcelain | sed -E "s/\s*\S+\s+//")
     install:
       - curl -fsSL https://pixi.sh/install.sh | PIXI_VERSION=v0.45.0 bash
-      - export PATH=$PATH:/home/docs/.pixi/bin
-      - pixi global install -e dev-all-py312
+      - /home/docs/.pixi/bin/pixi global install -e dev-all-py312
     post_install:
       - git update-index --really-refresh || true
 
