--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -11,8 +11,7 @@ build:
     post_checkout:
       # Check out the full depth for setuptools-scm
       - git fetch --unshallow || true
-      - ls -l
-      - pwd
+      - export CWD=$(pwd)
       # Check out git-lfs files
       # See https://docs.readthedocs.io/en/stable/build-customization.html#support-git-lfs-large-file-storage
       - wget
@@ -30,7 +29,7 @@ build:
         --porcelain | sed -E "s/\s*\S+\s+//")
     install:
       - curl -fsSL https://pixi.sh/install.sh | PIXI_VERSION=v0.45.0 bash
-      - /home/docs/.pixi/bin/pixi global install -e dev-all-py312
+      - /home/docs/.pixi/bin/pixi global install -e dev-all-py312 $CWD
     post_install:
       - git update-index --really-refresh || true
 
