--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -27,8 +27,8 @@ build:
     pre_install:
       - git update-index --assume-unchanged $(git status --untracked-files=no
         --porcelain | sed -E "s/\s*\S+\s+//")
-    install:
       - curl -fsSL https://pixi.sh/install.sh | PIXI_VERSION=v0.45.0 bash
+      - echo $CWD
       - /home/docs/.pixi/bin/pixi global install -e dev-all-py312 $CWD
     post_install:
       - git update-index --really-refresh || true
