--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -11,7 +11,6 @@ build:
     post_checkout:
       # Check out the full depth for setuptools-scm
       - git fetch --unshallow || true
-      - export CWD=$(pwd)
       # Check out git-lfs files
       # See https://docs.readthedocs.io/en/stable/build-customization.html#support-git-lfs-large-file-storage
       - wget
@@ -28,8 +27,7 @@ build:
       - git update-index --assume-unchanged $(git status --untracked-files=no
         --porcelain | sed -E "s/\s*\S+\s+//")
       - curl -fsSL https://pixi.sh/install.sh | PIXI_VERSION=v0.45.0 bash
-      - pwd
-      - /home/docs/.pixi/bin/pixi global install -e dev-all-py312 $CWD
+      - /home/docs/.pixi/bin/pixi global install -e dev-all-py312 .
     post_install:
       - git update-index --really-refresh || true
 
