--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -28,6 +28,7 @@ build:
         --porcelain | sed -E "s/\s*\S+\s+//")
       - curl -fsSL https://pixi.sh/install.sh | PIXI_VERSION=v0.45.0 bash
       - /home/docs/.pixi/bin/pixi install -e dev-all-py312
+      - eval "$(pixi shell-hook -e dev-all-py312)"
     post_install:
       - git update-index --really-refresh || true
 
