--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -26,12 +26,13 @@ build:
     pre_install:
       - git update-index --assume-unchanged $(git status --untracked-files=no
         --porcelain | sed -E "s/\s*\S+\s+//")
+    install:
       - curl -fsSL https://pixi.sh/install.sh | PIXI_VERSION=v0.45.0 bash
       - /home/docs/.pixi/bin/pixi install -e dev-all-py312
       - eval "$(/home/docs/.pixi/bin/pixi shell-hook -e dev-all-py312)"
     post_install:
       - git update-index --really-refresh || true
-
-mkdocs:
-  configuration: mkdocs.yml
-  fail_on_warning: true
+    build:
+      - mkdocs build -d docs_output
+      - mkdir -p $READTHEDOCS_OUTPUT/html/
+      - cp -r docs_output/* $READTHEDOCS_OUTPUT/html/
