--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -29,11 +29,10 @@ build:
     install:
       - curl -fsSL https://pixi.sh/install.sh | PIXI_VERSION=v0.45.0 bash
       - /home/docs/.pixi/bin/pixi install -e dev-all-py312
-      - eval "$(/home/docs/.pixi/bin/pixi shell-hook -e dev-all-py312)"
     post_install:
       - git update-index --really-refresh || true
     build:
       html:
-        - mkdocs build -d docs_output
+        - /home/docs/.pixi/bin/pixi run -e dev-all-py312 mkdocs build -d docs_output
         - mkdir -p $READTHEDOCS_OUTPUT/html/
         - cp -r docs_output/* $READTHEDOCS_OUTPUT/html/
