--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -28,6 +28,9 @@ build:
         --porcelain | sed -E "s/\s*\S+\s+//")
     install:
       - curl -fsSL https://pixi.sh/install.sh | PIXI_VERSION=v0.45.0 bash
+      # We call the full path of the executable /home/docs/.pixi/bin/pixi because
+      # the installation process does not add the executable to the $PATH, and
+      # activating Pixi with eval "$(pixi shell-hook)" was not working out of the box.
       - /home/docs/.pixi/bin/pixi install --frozen -e dev-all-py312
     post_install:
       - git update-index --really-refresh || true
