Add placeholder for playwright installation

--- a/.github/actions/setup-env/action.yml
+++ b/.github/actions/setup-env/action.yml
@@ -18,3 +18,7 @@ runs:
         frozen: true
         activate-environment: ${{ inputs.environment }}
         cache: false
+
+    # - name: Install playwright
+    #   shell: bash -el {0}
+    #   run: playwright install
