--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -27,7 +27,7 @@ build:
       - git update-index --assume-unchanged $(git status --untracked-files=no
         --porcelain | sed -E "s/\s*\S+\s+//")
     install:
-      - curl -fsSL https://pixi.sh/install.sh | PIXI_VERSION=v0.45.0 bash
+      - curl --fail --silent --show-error --location https://pixi.sh/install.sh | PIXI_VERSION=v0.45.0 bash
       # We call the full path of the executable /home/docs/.pixi/bin/pixi because
       # the installation process does not add the executable to the $PATH, and
       # activating Pixi with eval "$(pixi shell-hook)" was not working out of the box.
