--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -16,7 +16,7 @@ build:
       - wget
         https://github.com/git-lfs/git-lfs/releases/download/v3.4.0/git-lfs-linux-amd64-v3.4.0.tar.gz
       - tar xvfz git-lfs-linux-amd64-v3.4.0.tar.gz
-      - ln -s git-lfs-3.4.0/git-lfs git-lfs
+      - ln --symbolic git-lfs-3.4.0/git-lfs git-lfs
       - git config filter.lfs.process "`pwd`/git-lfs filter-process"
       - git config filter.lfs.smudge  "`pwd`/git-lfs smudge -- %f"
       - git config filter.lfs.clean "`pwd`/git-lfs clean -- %f"
@@ -25,17 +25,18 @@ build:
       - ./git-lfs checkout
     pre_install:
       - git update-index --assume-unchanged $(git status --untracked-files=no
-        --porcelain | sed -E "s/\s*\S+\s+//")
+        --porcelain | sed --regexp-extended "s/\s*\S+\s+//")
     install:
-      - curl --fail --silent --show-error --location https://pixi.sh/install.sh | PIXI_VERSION=v0.45.0 bash
+      - curl --fail --silent --show-error --location https://pixi.sh/install.sh |
+        PIXI_VERSION=v0.45.0 bash
       # We call the full path of the executable /home/docs/.pixi/bin/pixi because
       # the installation process does not add the executable to the $PATH, and
       # activating Pixi with eval "$(pixi shell-hook)" was not working out of the box.
-      - /home/docs/.pixi/bin/pixi install --frozen -e dev-all-py312
+      - /home/docs/.pixi/bin/pixi install --frozen --environment dev-all-py312
     post_install:
       - git update-index --really-refresh || true
     build:
       html:
-        - mkdir -p $READTHEDOCS_OUTPUT/html/
-        - /home/docs/.pixi/bin/pixi run --frozen -e dev-all-py312 mkdocs build -d
+        - mkdir --parents $READTHEDOCS_OUTPUT/html/
+        - /home/docs/.pixi/bin/pixi run --frozen --environment dev-all-py312 mkdocs build --site-dir
           $READTHEDOCS_OUTPUT/html/
