Fix quotation marks

--- a/.github/actions/setup-env/action.yml
+++ b/.github/actions/setup-env/action.yml
@@ -5,7 +5,7 @@ inputs:
   environment:
     default: "default"
     description:
-      "Pixi environment to activate. Examples include `default`, `dev-all-py312`"
+      "Pixi environment to activate. Examples include 'default', 'dev-all-py312'"
 
 runs:
   using: composite
