Add `pip` dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -115,6 +115,7 @@ python = ">=3.10,<3.13"
 
 [tool.pixi.feature.dev.dependencies]
 git-lfs = "*"
+pip = "*"
 
 [tool.pixi.feature.py310.dependencies]
 python = "3.10.*"
