Add publish to pypi job

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,6 +2,15 @@ name: release
 
 on:
   workflow_dispatch:
+    inputs:
+      pypi-repository:
+        type: choice
+        description: Whether to upload to a test repository or production repository
+        required: true
+        default: testpypi
+        options:
+          - pypi
+          - testpypi
 
 jobs:
   build:
@@ -35,3 +44,46 @@ jobs:
     with:
       base64-subjects: "${{ needs.build.outputs.hashes }}"
       upload-assets: true
+
+  publish-pypi:
+    name: "Publish to PyPI"
+    needs: ["build", "provenance"]
+    permissions:
+      contents: write
+      id-token: write
+    runs-on: "ubuntu-latest"
+    environment:
+      name: pypi
+      url: https://pypi.org/p/ragna
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Setup environment
+        uses: ./.github/actions/setup-env
+        with:
+          environment: "build"
+
+      - name: "Download dists"
+        uses: "actions/download-artifact@d3f86a106a0bac45b974a628896c90dbdf5c8093"
+        with:
+          name: "dist"
+          path: "dist/"
+
+      - name: "Publish dists to PyPI"
+        if:
+          ( github.event_name == 'push' && startsWith(github.ref, 'refs/tags/') ) || (
+          github.event_name == 'workflow_dispatch' &&
+          github.event.inputs.pypi-repository == 'pypi' )
+        uses: "pypa/gh-action-pypi-publish@76f52bc884231f62b9a034ebfe128415bbaabdfc"
+
+      - name: "Publish dists to TestPyPI"
+        if:
+          github.event_name == 'workflow_dispatch' &&
+          github.event.inputs.pypi-repository == 'testpypi'
+        uses: "pypa/gh-action-pypi-publish@76f52bc884231f62b9a034ebfe128415bbaabdfc"
+        with:
+          repository-url: https://test.pypi.org/legacy/
