Remove unused twine dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -175,7 +175,7 @@ dev = [
     "material-plausible-plugin>=0.3.0,<0.4",
     "mdx-truly-sane-lists>=1.3,<2"
 ]
-build = ["twine", "build"]
+build = ["build"]
 
 [tool.ruff.lint]
 select = [
